istiofiles/disable-mtls.yml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: "$USERNAME-tutorial"
spec:
  mtls:
    mode: DISABLE
