istiofiles/destination-rule-tls.yml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: "$USERNAME-tutorial"
spec:
  host: "*.$USERNAME-tutorial.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
