istiofiles/authorization-policy-allow-preference.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "preference-viewer"
  namespace: $USERNAME-tutorial
spec:
  selector:
    matchLabels:
      app: preference
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/$USERNAME-tutorial/sa/customer"]
    to:
    - operation:
        methods: ["GET"]
