istiofiles/authorization-policy-deny-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: $USERNAME-tutorial
spec:
  {}
